log
Fri, Mar 21, 2025 11:44:34 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Sat, Mar 22, 2025 12:40:11 AM: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:49:16: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
       elemento = k;
                ^
cc1.exe: all warnings being treated as errors
Compilation failed
92b07e4
Sat, Mar 22, 2025  5:07:05 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
7a2fd4c
